samples/_failures_safe/1761187598_f607d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d889920.c: In function ‘main’:
./samples/SAFE/__tmp_9d889920.c:174:9: error: expected expression at end of input
  174 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_9d889920.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d889920.c:174:9: error: expected declaration or statement at end of input
